--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Behold Your God — Table of Contents</title>
+  <title>Table of Contents</title>
 
-  <!-- minimalist dark-mode styling that matches viewer.html -->
   <style>
     :root {
       --bg: #0d1117;
@@ -13,7 +12,6 @@
       --text: #e6edf3;
       --accent: #58cdaa;
     }
-
     body {
       margin: 0;
       font-family: Georgia, serif;
@@ -21,26 +19,22 @@
       color: var(--text);
       line-height: 1.6;
     }
-
     h1 {
       text-align: center;
       padding: 2rem 1rem;
       font-size: 2.5rem;
     }
-
     main {
       max-width: 900px;
       margin: 0 auto 4rem;
       padding: 0 1rem;
     }
-
     .toc-panel {
       background: var(--panel);
       border-radius: 16px;
       padding: 2rem;
       box-shadow: 0 15px 30px rgba(0, 0, 0, 0.35);
     }
-
     ul {
       list-style: none;
       margin: 0;
@@ -49,7 +43,6 @@
       flex-direction: column;
       gap: 1rem;
     }
-
     a {
       display: block;
       padding: 1rem 1.25rem;
@@ -61,12 +54,10 @@
       font-size: 1.1rem;
       transition: all 0.25s ease;
     }
-
     a:hover {
       border-color: var(--accent);
       transform: translateY(-2px) scale(1.02);
     }
-
     .loading,
     .error {
       text-align: center;
@@ -77,7 +68,7 @@
 </head>
 
 <body>
-  <h1>Behold Your God</h1>
+  <h1></h1>
 
   <main>
     <section class="toc-panel" id="toc-panel">
@@ -87,43 +78,57 @@
   </main>
 
   <script>
-    /*
-      Dynamically discover chapter JSON files in /data/contents/
-      – fires off all fetches in parallel for faster start-up.
-    */
     (async () => {
-      const MAX_CONTENTS = 50;                // upper bound — adjust as book grows
-      const listEl   = document.getElementById('toc-list');
+      const MAX_CONTENTS = 50;
+      const listEl = document.getElementById('toc-list');
       const statusEl = document.getElementById('status');
+      const h1El = document.querySelector('h1');
 
-      // launch all fetches at once
-      const fetches = Array.from({ length: MAX_CONTENTS }, (_, i) =>
-        fetch(`data/contents/content${i + 1}.json`)
-          .then(r => (r.ok ? r.json() : null))
-          .then(ch => ch && ({ id: i + 1, ch }))
-          .catch(() => null)                  // ignore missing/parse errors
-      );
+      try {
+        // --- NEW: Fetch the schema first ---
+        const schemaRes = await fetch('data/schema.json');
+        if (!schemaRes.ok) throw new Error('schema.json missing');
+        const schema = await schemaRes.json();
+        
+        // --- NEW: Use schema to set titles ---
+        h1El.textContent = schema.projectName;
+        document.title = `${schema.projectName} — Table of Contents`;
+        const entryLabel = schema.entryLabel || 'Item';
 
-      const results = (await Promise.all(fetches)).filter(Boolean);
+        // Fetch all content files in parallel
+        const fetches = Array.from({ length: MAX_CONTENTS }, (_, i) =>
+          fetch(`data/contents/content${i + 1}.json`)
+            .then(r => (r.ok ? r.json() : null))
+            .then(ch => ch && ({ id: i + 1, ch }))
+            .catch(() => null)
+        );
 
-      if (results.length) {
-        statusEl.hidden = true;
-        listEl.hidden   = false;
+        const results = (await Promise.all(fetches)).filter(Boolean);
 
-        results.forEach(({ id, ch }) => {
-          // unwrap if chapter JSON is nested under its numeric key
-          const obj = ch.title ? ch : Object.values(ch)[0];
+        if (results.length) {
+          statusEl.hidden = true;
+          listEl.hidden = false;
 
-          const li = document.createElement('li');
-          li.innerHTML = `
-            <a href="viewer.html?id=content${id}">
-              <strong>Chapter ${id}:</strong> ${obj.title}
-              <em style="opacity:.7;font-size:.9rem;">${obj.pageRange}</em>
-            </a>`;
-          listEl.appendChild(li);
-        });
-      } else {
-        statusEl.textContent = 'No contents found.';
+          results.forEach(({ id, ch }) => {
+            const obj = ch.title ? ch : Object.values(ch)[0];
+            const li = document.createElement('li');
+            
+            // --- NEW: Use schema to set the entry label ---
+            li.innerHTML = `
+              <a href="viewer.html?id=content${id}">
+                <strong>${entryLabel} ${id}:</strong> ${obj.title}
+                <em style="opacity:.7;font-size:.9rem;">${obj.pageRange || ''}</em>
+              </a>`;
+            listEl.appendChild(li);
+          });
+        } else {
+          statusEl.textContent = 'No contents found.';
+        }
+      } catch (error) {
+        console.error("Error loading Table of Contents:", error);
+        h1El.textContent = "Error";
+        statusEl.textContent = error.message;
+        statusEl.hidden = false;
       }
     })();
   </script>
