--- a/public/viewer.html
+++ b/public/viewer.html
@@ -5,140 +5,203 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Viewer</title>
 
+  <!-- minimal palette for first paint -->
   <style>
-    html{visibility:hidden;}
-    :root{--text-primary:#ffffff;--background-gradient:#000000;}
-    /* All your other component CSS remains unchanged */
+    :root{
+      --text-primary:#ecf0f1; --accent-primary:#64b5f6; --accent-secondary:#42a5f5;
+      --background-gradient:linear-gradient(135deg,#0a0a23 0%,#1a1a3a 50%,#2e2e5e 100%);
+      --surface-color:rgba(0,0,0,.6); --surface-color-secondary:rgba(0,0,0,.5);
+      --border-color:rgba(255,255,255,.3); --border-color-accent:rgba(100,181,246,.4);
+      --header-border-bottom:1px solid var(--border-color);
+      --component-backdrop-filter:blur(15px); --component-box-shadow:0 15px 35px rgba(0,0,0,.3);
+    }
     *{margin:0;padding:0;box-sizing:border-box;}
-    body{font-family:'Georgia',serif;line-height:1.6;color:var(--text-primary);background:var(--background-gradient);min-height:100vh;transition:background .5s ease,color .5s ease;}
+    body{font-family:Georgia,serif;line-height:1.6;color:var(--text-primary);
+         background:var(--background-gradient);min-height:100vh;transition:background .5s,color .5s;}
     .container{max-width:1200px;margin:0 auto;padding:20px;}
-    .header{background:var(--surface-color);backdrop-filter:var(--component-backdrop-filter);border-radius:20px;padding:30px;margin-bottom:30px;box-shadow:var(--component-box-shadow);text-align:center;border:var(--header-border-bottom);}
-    .book-title{font-size:2.5em;color:var(--text-primary);margin-bottom:10px;font-weight:bold;text-shadow:var(--book-title-text-shadow);}
-    .chapter-info{font-size:1.3em;color:var(--accent-primary);margin-bottom:10px;}
-    .page-range{font-size:1.1em;color:var(--accent-secondary);font-style:italic;}
-    .back-to-index-link{display:block;text-align:center;margin-top:20px;color:var(--text-secondary);text-decoration:none;font-size:1.1em;transition:color .3s ease;}
-    .back-to-index-link:hover{text-decoration:underline;color:var(--text-primary);}
-    .nav-tabs{display:flex;justify-content:center;gap:15px;margin-bottom:30px;flex-wrap:wrap;padding:10px 0;}
-    .tab-button{background:var(--surface-color-secondary);border:1px solid var(--border-color);color:var(--text-primary);backdrop-filter:var(--component-backdrop-filter);padding:12px 28px;border-radius:50px;cursor:pointer;font-size:1em;font-weight:500;transition:all .3s ease;box-shadow:0 5px 15px rgba(0,0,0,.2);}
-    .tab-button.active{font-weight:bold;border-color:var(--accent-primary);transform:translateY(-2px);box-shadow:0 6px 20px rgba(0,0,0,.35);color:var(--accent-primary);background:linear-gradient(135deg,#1a1a3a 0%,#2e2e5e 100%);}
-    .content-panel{position:relative;background:var(--surface-color);backdrop-filter:var(--component-backdrop-filter);border:1px solid var(--border-color);border-radius:20px;padding:30px;box-shadow:var(--component-box-shadow);display:none;animation:fadeIn .5s ease-in;}
+    .header{background:var(--surface-color);border-radius:20px;padding:30px;margin-bottom:30px;
+            backdrop-filter:var(--component-backdrop-filter);box-shadow:var(--component-box-shadow);
+            border:var(--header-border-bottom);text-align:center;}
+    .book-title{font-size:2.4em;font-weight:bold;}
+    .nav-tabs{display:flex;justify-content:center;gap:15px;margin-bottom:30px;flex-wrap:wrap;}
+    .tab-button{background:var(--surface-color-secondary);border:1px solid var(--border-color);
+                color:var(--text-primary);padding:12px 28px;border-radius:50px;cursor:pointer;
+                transition:.3s;box-shadow:0 5px 15px rgba(0,0,0,.2);}
+    .tab-button.active{font-weight:bold;border-color:var(--accent-primary);color:var(--accent-primary);
+                       background:linear-gradient(135deg,#1a1a3a 0%,#2e2e5e 100%);}
+    .content-panel{background:var(--surface-color);border:1px solid var(--border-color);
+                   border-radius:20px;padding:30px;box-shadow:var(--component-box-shadow);display:none;}
     .content-panel.active{display:block;}
-    @keyframes fadeIn{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
-    .section-title{font-size:1.8em;color:var(--text-primary);margin-bottom:20px;padding-bottom:10px;border-bottom:3px solid var(--accent-primary);}
-    .central-thesis,.warning-highlight,.conclusion-box,.scripture-ref,.quote,.concept-card,.ref-item,.argument-point{background:var(--surface-color-secondary);border:1px solid var(--border-color-accent);color:var(--text-primary);backdrop-filter:var(--component-backdrop-filter);padding:15px;border-radius:10px;margin:15px 0;border-left:4px solid var(--accent-primary);}
-    .concept-card ul{padding-left:25px;}
-    .central-thesis,.warning-highlight,.conclusion-box{padding:25px;font-size:1.1em;}
-    .argument-point,.quote,.ref-item{border-left-color:var(--accent-secondary);}
-    .quote{font-style:italic;}
-    .argument-title,.concept-title,.quote-source,.ref-title,.ref-detail-header span{font-weight:bold;color:var(--accent-primary);margin-bottom:10px;}
+    .central-thesis,.warning-highlight,.conclusion-box,.scripture-ref,
+    .quote,.concept-card,.argument-point,.ref-item{
+      background:var(--surface-color-secondary);border:1px solid var(--border-color-accent);
+      padding:15px;border-radius:10px;margin:15px 0;border-left:4px solid var(--accent-primary);}
+    .quote{font-style:italic;} .concept-card ul{padding-left:25px;}
   </style>
+
+  <!-- theme bootstrap (unchanged) -->
   <script type="module">
-    (async () => {
-      const res = await fetch('data/themes.json');
-      if (!res.ok) throw new Error('themes.json missing');
-      const themeJson = await res.json();
-      const style = document.createElement('style');
-      let css = '';
-      for (const id in themeJson.themes){ css += `body.theme-${id}{`; for (const [k,v] of Object.entries(themeJson.themes[id])) css += `${k}:${v};`; css += '}'; }
-      style.textContent = css;
-      document.head.appendChild(style);
-      document.body.className = `theme-${themeJson.meta?.defaultTheme || 'original'}`;
-      document.documentElement.style.visibility = 'visible';
-    })().catch(err=>{ console.error(err); document.documentElement.style.visibility='visible'; });
+    (async()=>{
+      try{
+        const res=await fetch('data/themes.json');
+        if(!res.ok)throw new Error('themes.json missing');
+        const j=await res.json();
+        const s=document.createElement('style');let css='';
+        for(const id in j.themes){
+          css+=`body.theme-${id}{`;for(const[k,v]of Object.entries(j.themes[id]))css+=`${k}:${v};`;css+='}';
+        }
+        s.textContent=css;document.head.appendChild(s);
+        document.body.className=`theme-${j.meta?.defaultTheme||'original'}`;
+      }catch(e){console.error(e);}
+    })();
   </script>
 </head>
 
 <body>
-  <div class="theme-selector">
-    <button class="theme-btn" data-theme="original" title="Cosmic Night"></button>
-    <button class="theme-btn" data-theme="stately"  title="Stately Theme"></button>
-    <button class="theme-btn" data-theme="forest"   title="Forest Canopy"></button>
-  </div>
   <div class="container">
-    <section class="hero-banner">
-        <img id="hero-img" style="width:100%;height:250px;object-fit:cover;display:none;" />
-    </section>
     <header class="header">
-        <h1 class="book-title"></h1>
-        <div class="chapter-info">Loading…</div>
-        <div class="page-range"></div>
-        <a href="index.html" class="back-to-index-link">&larr; Table of Contents</a>
+      <h1 class="book-title">Loading…</h1>
+      <div class="chapter-info"></div>
+      <div class="page-range"></div>
+      <a href="index.html" class="back-to-index-link">&larr; Table of Contents</a>
     </header>
+
     <nav id="nav-tabs-container" class="nav-tabs"></nav>
     <main id="main-content-area">
-        <div class="content-panel active" style="text-align:center;"><h2>Loading Content…</h2></div>
+      <div class="content-panel active" style="text-align:center;"><h2>Loading…</h2></div>
     </main>
   </div>
 
   <script>
-    let referenceData = {};
-    const RENDER = {
-      thesis: s => `<div class="central-thesis">${s.central_thesis}</div><div class="warning-highlight">${s.key_statement}</div><div class="concept-card"><h3>${s.foundational_principles.title}</h3><ul>${s.foundational_principles.points.map(p=>`<li>${p}</li>`).join('')}</ul></div>`,
-      arguments: s => s.points.map(p=>`<div class="argument-point"><h3 class="argument-title">${p.title}</h3><p>${p.explanation}</p>${p.key_insight ? `<p><em>${p.key_insight}</em></p>` : ''}${p.quotes.map(q=>{const cls=q.type==='scripture'?'scripture-ref':q.type==='warning'?'warning-highlight':'quote';return `<div class="${cls}">${q.text}<br><span class="quote-source">${q.source}</span></div>`;}).join('')}</div>`).join(''),
-      concepts: s => s.points.map(c=>`<div class="concept-card"><span class="concept-title">${c.title}</span>: ${c.definition}</div>`).join(''),
-      references: s => { const list = arr => arr.map(r=>`<div class="ref-item clickable-ref" data-ref-id="${r.id}">${r.text}</div>`).join(''); return `<div id="referenceList">${list(s.scripture)}${list(s.other)}</div><div id="referenceDetailCard" class="reference-detail-card" hidden><button class="close-ref-btn">&times;</button><div class="ref-detail-header"><span id="refDetailTitle"></span></div><div id="refDetailContent" class="ref-detail-content"></div></div>`;},
-      conclusion: s => s.points.map(p=>{ const cls=p.type==='scripture'?'scripture-ref':p.type==='thesis'?'central-thesis':'conclusion-box'; return `<div class="${cls}"><h3>${p.title}</h3><p>${p.content}</p></div>`;}).join('')
+    /* ---------------------------------------------------- *
+     *  RENDERER LIBRARY – add new ones, reference in schema *
+     * ---------------------------------------------------- */
+    const RENDERER_LIBRARY = {
+      'renderer-thesis': s => `
+        <div class="central-thesis">${s.central_thesis}</div>
+        <div class="warning-highlight">${s.key_statement}</div>
+        <div class="concept-card"><h3>${s.foundational_principles.title}</h3>
+          <ul>${s.foundational_principles.points.map(p=>`<li>${p}</li>`).join('')}</ul>
+        </div>`,
+
+      'renderer-points-list': s =>
+        s.points.map(p=>`
+          <div class="argument-point">
+            <h3 class="argument-title">${p.title}</h3>
+            <p>${p.explanation}</p>
+            ${p.key_insight?`<p><em>${p.key_insight}</em></p>`:''}
+            ${(p.quotes||[]).map(q=>{
+              const cls=q.type==='scripture'?'scripture-ref':
+                        q.type==='warning'  ?'warning-highlight':'quote';
+              return `<div class="${cls}">${q.text}<br><span class="quote-source">${q.source}</span></div>`;
+            }).join('')}
+          </div>`).join(''),
+
+      'renderer-definitions-list': s =>
+        s.points.map(c=>`
+          <div class="concept-card"><span class="concept-title">${c.title}</span>: ${c.definition}</div>`
+        ).join(''),
+
+      'renderer-thinker-examples': s =>
+        s.points.map(p=>`
+          <div class="argument-point">
+            <h3 class="argument-title">${p.title}</h3>
+            <p>${p.explanation}</p>
+          </div>`).join(''),
+
+      'renderer-conclusion-list': s =>
+        s.points.map(p=>{
+          const cls=p.type==='scripture'?'scripture-ref':
+                    p.type==='thesis'   ?'central-thesis':'conclusion-box';
+          return `<div class="${cls}"><h3>${p.title}</h3><p>${p.content}</p></div>`;
+        }).join('')
     };
 
-    /* ---------- MAIN RENDER FUNCTION ---------- */
-    function renderEntry(entryData, entryId, schema) {
-        // Get project-specific labels from the schema
-        const projectName = schema.projectName || 'Project';
-        const entryLabel = schema.entryLabel || 'Item';
+    /* --------------------- helpers --------------------- */
+    const showTab=(id,btn)=>{
+      document.querySelectorAll('.tab-button').forEach(b=>b.classList.remove('active'));
+      document.querySelectorAll('.content-panel').forEach(p=>p.classList.remove('active'));
+      btn.classList.add('active'); document.getElementById(id).classList.add('active');
+    };
 
-        // Set all titles dynamically
-        document.title = `${projectName} — ${entryLabel} ${entryId}`;
-        document.querySelector('.book-title').textContent = projectName;
-        document.querySelector('.chapter-info').textContent = `${entryLabel} ${entryId}: ${entryData.title}`;
-        document.querySelector('.page-range').textContent = entryData.pageRange || '';
+    /* --------------------- main render ----------------- */
+  // ───────────── renderEntry ─────────────
+  function renderEntry(entry, schema, num){
 
-        // --- The rest of the function renders the page as before ---
-        const hero = document.getElementById('hero-img');
-        hero.style.display = entryData.heroImage ? 'block' : 'none';
-        if (entryData.heroImage) hero.src = entryData.heroImage;
-        referenceData = entryData.referenceData || {};
-        const sections = schema.defaultSections;
-        document.getElementById('nav-tabs-container').innerHTML = sections.map(i=>`<button class="tab-button" data-tab="${i}">${schema.sectionLabels[i]||i}</button>`).join('');
-        const main = document.getElementById('main-content-area');
-        main.innerHTML = sections.map(sec => {
-            if (!entryData[sec]) return '';
-            return `<div class="content-panel" id="${sec}"><h2 class="section-title">${entryData[sec].title}</h2>${(RENDER[sec]||(()=>''))(entryData[sec])}</div>`;
-        }).join('');
-        const firstTab = document.querySelector('.tab-button');
-        if (firstTab) {
-            firstTab.classList.add('active');
-            document.getElementById(firstTab.dataset.tab).classList.add('active');
-        }
+    /* ---------- choose section order ---------- */
+    // BEGIN PATCH
+    // always start with the order defined in the schema
+    const sections = [...schema.defaultSections];
+
+    // if the entry has extra sections that the schema also recognises
+    // (i.e. there is a renderer for them), append them
+    Object.keys(entry).forEach(sec => {
+      if (schema.sectionRenderers[sec] && !sections.includes(sec)) {
+        sections.push(sec);
+      }
+    });
+    // END PATCH
+
+    /* ---------- header ---------- */
+    document.title = `${schema.projectName} — ${schema.entryLabel} ${num}`;
+    document.querySelector('.book-title').textContent = schema.projectName;
+    document.querySelector('.chapter-info').textContent =
+      `${schema.entryLabel} ${num}: ${entry.title}`;
+
+      document.querySelector('.page-range').textContent = entry.pageRange || '';
+
+      /* nav tabs */
+      document.getElementById('nav-tabs-container').innerHTML =
+        sections
+          .filter(sec => entry[sec])       // only tabs that actually have data
+          .map(sec => `<button class="tab-button" data-tab="${sec}">
+                         ${schema.sectionLabels[sec] || sec}
+                       </button>`).join('');
+
+      /* panels */
+      document.getElementById('main-content-area').innerHTML =
+        sections
+          .filter(sec => entry[sec])
+          .map(sec =>{
+            const rendererName = schema.sectionRenderers[sec];
+            const fn = RENDERER_LIBRARY[rendererName];
+            return `<div class="content-panel" id="${sec}">
+                      <h2 class="section-title">${entry[sec].title}</h2>
+                      ${fn ? fn(entry[sec]) : `<p>No renderer for ${sec}</p>`}
+                    </div>`;
+          }).join('');
+
+      /* first tab active */
+      const first=document.querySelector('.tab-button');
+      if(first)showTab(first.dataset.tab,first);
     }
 
-    /* ---------- INITIALIZE ---------- */
-    async function init() {
+    async function init(){
       const rawId = new URLSearchParams(location.search).get('id') || 'content1';
-      const entryNum = rawId.replace(/^content/, '');
-      const main = document.getElementById('main-content-area');
-      try {
-        const [contentRes, schemaRes] = await Promise.all([
+      const num   = rawId.replace(/^content/,'');
+      const main  = document.getElementById('main-content-area');
+      try{
+        const [entryRes,schemaRes] = await Promise.all([
           fetch(`data/contents/${rawId}.json`),
           fetch('data/schema.json')
         ]);
-        if (!contentRes.ok) throw new Error(`${rawId}.json not found`);
-        if (!schemaRes.ok)  throw new Error('schema.json missing');
-        const entryData = await contentRes.json();
-        const schemaData  = await schemaRes.json();
-        renderEntry(entryData, entryNum, schemaData);
-      } catch (err) {
+        if(!entryRes.ok)  throw new Error(`${rawId}.json missing`);
+        if(!schemaRes.ok) throw new Error('schema.json missing');
+
+        const entry  = await entryRes.json();
+        const schema = await schemaRes.json();
+        renderEntry(entry,schema,num);
+      }catch(err){
         console.error(err);
-        main.innerHTML = `<div class="content-panel active" style="color:#ff8a80;"><h2>Error Loading Page</h2><p>${err.message}</p></div>`;
+        main.innerHTML=`<div class="content-panel active" style="color:#ff8a80;">
+                          <h2>Error Loading Page</h2><p>${err.message}</p></div>`;
       }
     }
 
-    document.addEventListener('DOMContentLoaded', () => {
+    document.addEventListener('DOMContentLoaded', ()=>{
       init();
-      document.body.addEventListener('click', e => {
-        const t = e.target.closest('.tab-button'); if(t) { document.querySelectorAll('.tab-button').forEach(b=>b.classList.remove('active')); t.classList.add('active'); document.querySelectorAll('.content-panel').forEach(p=>p.classList.remove('active')); document.getElementById(t.dataset.tab).classList.add('active'); return; }
-        const th = e.target.closest('.theme-btn'); if(th) { document.body.className=`theme-${th.dataset.theme}`; return; }
-        const r = e.target.closest('.clickable-ref'); if(r) { /* showRef logic here */ return; }
-        const c = e.target.closest('.close-ref-btn'); if(c) { /* hideRef logic here */ return; }
+      document.body.addEventListener('click', e=>{
+        const btn=e.target.closest('.tab-button'); if(btn) return showTab(btn.dataset.tab,btn);
       });
     });
   </script>
