--- a/public/viewer.html
+++ b/public/viewer.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Viewer</title>
+  <title>Behold Your God — Viewer</title>
 
-  <!-- minimal palette for first paint -->
+  <!-- ---------- minimal fallback palette (overridden by themes.json) ---------- -->
   <style>
     :root{
-      --text-primary:#ecf0f1; --accent-primary:#64b5f6; --accent-secondary:#42a5f5;
-      --background-gradient:linear-gradient(135deg,#0a0a23 0%,#1a1a3a 50%,#2e2e5e 100%);
+      --text-primary:#ecf0f1; --text-secondary:#90caf9;
+      --accent-primary:#64b5f6; --accent-secondary:#42a5f5;
+      --background-gradient:linear-gradient(135deg,#0a0a23,#2e2e5e);
       --surface-color:rgba(0,0,0,.6); --surface-color-secondary:rgba(0,0,0,.5);
       --border-color:rgba(255,255,255,.3); --border-color-accent:rgba(100,181,246,.4);
       --header-border-bottom:1px solid var(--border-color);
@@ -17,47 +18,72 @@
     }
     *{margin:0;padding:0;box-sizing:border-box;}
     body{font-family:Georgia,serif;line-height:1.6;color:var(--text-primary);
-         background:var(--background-gradient);min-height:100vh;transition:background .5s,color .5s;}
+         background:var(--background-gradient);min-height:100vh;
+         transition:background .5s,color .5s;}
     .container{max-width:1200px;margin:0 auto;padding:20px;}
+
+    /* header / nav / panel style (unchanged) */
     .header{background:var(--surface-color);border-radius:20px;padding:30px;margin-bottom:30px;
             backdrop-filter:var(--component-backdrop-filter);box-shadow:var(--component-box-shadow);
             border:var(--header-border-bottom);text-align:center;}
-    .book-title{font-size:2.4em;font-weight:bold;}
+    .book-title{font-size:2.5em;font-weight:bold;}
     .nav-tabs{display:flex;justify-content:center;gap:15px;margin-bottom:30px;flex-wrap:wrap;}
     .tab-button{background:var(--surface-color-secondary);border:1px solid var(--border-color);
                 color:var(--text-primary);padding:12px 28px;border-radius:50px;cursor:pointer;
                 transition:.3s;box-shadow:0 5px 15px rgba(0,0,0,.2);}
     .tab-button.active{font-weight:bold;border-color:var(--accent-primary);color:var(--accent-primary);
-                       background:linear-gradient(135deg,#1a1a3a 0%,#2e2e5e 100%);}
+                       background:linear-gradient(135deg,#1a1a3a,#2e2e5e);}
     .content-panel{background:var(--surface-color);border:1px solid var(--border-color);
-                   border-radius:20px;padding:30px;box-shadow:var(--component-box-shadow);display:none;}
+                   border-radius:20px;padding:30px;box-shadow:var(--component-box-shadow);
+                   display:none;}
     .content-panel.active{display:block;}
+
+    /* reusable chips */
     .central-thesis,.warning-highlight,.conclusion-box,.scripture-ref,
     .quote,.concept-card,.argument-point,.ref-item{
       background:var(--surface-color-secondary);border:1px solid var(--border-color-accent);
       padding:15px;border-radius:10px;margin:15px 0;border-left:4px solid var(--accent-primary);}
     .quote{font-style:italic;} .concept-card ul{padding-left:25px;}
+
+    /* pop-up */
+    .reference-detail-card{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
+                           width:min(90%,700px);max-height:80vh;overflow:auto;
+                           background:var(--surface-color);border:1px solid var(--border-color);
+                           border-radius:20px;padding:30px;box-shadow:var(--component-box-shadow);
+                           z-index:1001;}
+    .close-ref-btn{position:absolute;top:12px;right:12px;border:none;background:transparent;
+                   color:var(--accent-primary);font-size:1.6rem;cursor:pointer;}
   </style>
 
-  <!-- theme bootstrap (unchanged) -->
+  <!-- ---------- theme bootstrap (builds CSS vars from themes.json) ---------- -->
   <script type="module">
     (async()=>{
       try{
-        const res=await fetch('data/themes.json');
-        if(!res.ok)throw new Error('themes.json missing');
-        const j=await res.json();
-        const s=document.createElement('style');let css='';
+        const r=await fetch('data/themes.json');if(!r.ok)throw new Error;
+        const j=await r.json();let css='';
         for(const id in j.themes){
-          css+=`body.theme-${id}{`;for(const[k,v]of Object.entries(j.themes[id]))css+=`${k}:${v};`;css+='}';
+          css+=`body.theme-${id}{`;
+          for(const[k,v]of Object.entries(j.themes[id]))css+=`${k}:${v};`;
+          css+='}';
         }
-        s.textContent=css;document.head.appendChild(s);
+        const st=document.createElement('style');st.textContent=css;document.head.appendChild(st);
         document.body.className=`theme-${j.meta?.defaultTheme||'original'}`;
-      }catch(e){console.error(e);}
+      }catch(e){console.error('theme bootstrap failed',e);}
     })();
   </script>
 </head>
 
 <body>
+  <!-- theme picker -->
+  <div style="position:fixed;top:15px;right:20px;display:flex;gap:10px;z-index:1002;">
+    <button class="theme-btn" data-theme="original" title="Cosmic Night"
+            style="width:40px;height:40px;background:linear-gradient(135deg,#1a1a3a,#64b5f6);"></button>
+    <button class="theme-btn" data-theme="stately"  title="Stately"
+            style="width:40px;height:40px;background:#ffffff;"></button>
+    <button class="theme-btn" data-theme="forest"   title="Forest"
+            style="width:40px;height:40px;background:linear-gradient(135deg,#2a4c3a,#58cdaa);"></button>
+  </div>
+
   <div class="container">
     <header class="header">
       <h1 class="book-title">Loading…</h1>
@@ -67,141 +93,129 @@
     </header>
 
     <nav id="nav-tabs-container" class="nav-tabs"></nav>
+
     <main id="main-content-area">
       <div class="content-panel active" style="text-align:center;"><h2>Loading…</h2></div>
     </main>
   </div>
 
   <script>
-    /* ---------------------------------------------------- *
-     *  RENDERER LIBRARY – add new ones, reference in schema *
-     * ---------------------------------------------------- */
-    const RENDERER_LIBRARY = {
-      'renderer-thesis': s => `
+    /* ------------ global ------------ */
+    let referenceData={};
+
+    /* ------------ renderer library ------------ */
+    const RENDERER_LIBRARY={
+      'renderer-thesis':s=>`
         <div class="central-thesis">${s.central_thesis}</div>
         <div class="warning-highlight">${s.key_statement}</div>
         <div class="concept-card"><h3>${s.foundational_principles.title}</h3>
           <ul>${s.foundational_principles.points.map(p=>`<li>${p}</li>`).join('')}</ul>
         </div>`,
 
-      'renderer-points-list': s =>
-        s.points.map(p=>`
-          <div class="argument-point">
-            <h3 class="argument-title">${p.title}</h3>
-            <p>${p.explanation}</p>
-            ${p.key_insight?`<p><em>${p.key_insight}</em></p>`:''}
-            ${(p.quotes||[]).map(q=>{
-              const cls=q.type==='scripture'?'scripture-ref':
-                        q.type==='warning'  ?'warning-highlight':'quote';
-              return `<div class="${cls}">${q.text}<br><span class="quote-source">${q.source}</span></div>`;
-            }).join('')}
-          </div>`).join(''),
+      'renderer-points-list':s=>s.points.map(p=>`
+        <div class="argument-point">
+          <h3 class="argument-title">${p.title}</h3><p>${p.explanation}</p>
+          ${p.key_insight?`<p><em>${p.key_insight}</em></p>`:''}
+          ${(p.quotes||[]).map(q=>{
+            const cls=q.type==='scripture'?'scripture-ref':
+                      q.type==='warning'  ?'warning-highlight':'quote';
+            return `<div class="${cls}">${q.text}<br><span class="quote-source">${q.source}</span></div>`;
+          }).join('')}
+        </div>`).join(''),
 
-      'renderer-definitions-list': s =>
-        s.points.map(c=>`
-          <div class="concept-card"><span class="concept-title">${c.title}</span>: ${c.definition}</div>`
-        ).join(''),
+      'renderer-definitions-list':s=>s.points.map(c=>`
+        <div class="concept-card"><span class="concept-title">${c.title}</span>: ${c.definition}</div>`
+      ).join(''),
 
-      'renderer-thinker-examples': s =>
-        s.points.map(p=>`
-          <div class="argument-point">
-            <h3 class="argument-title">${p.title}</h3>
-            <p>${p.explanation}</p>
-          </div>`).join(''),
+      /* ---------- generic list-with-detail renderer ---------- */
+      'renderer-list-detail':s=>{
+        const row=r=>`<div class="ref-item clickable-ref" data-ref-id="${r.id||''}">${r.text}</div>`;
+        return [].concat(s.items||[],s.scripture||[],s.other||[],s.points||[]).map(row).join('');
+      },
 
-      'renderer-conclusion-list': s =>
-        s.points.map(p=>{
-          const cls=p.type==='scripture'?'scripture-ref':
-                    p.type==='thesis'   ?'central-thesis':'conclusion-box';
-          return `<div class="${cls}"><h3>${p.title}</h3><p>${p.content}</p></div>`;
-        }).join('')
+      'renderer-conclusion-list':s=>s.points.map(p=>{
+        const cls=p.type==='scripture'?'scripture-ref':
+                  p.type==='thesis'   ?'central-thesis':'conclusion-box';
+        return `<div class="${cls}"><h3>${p.title}</h3><p>${p.content}</p></div>`;
+      }).join('')
     };
 
-    /* --------------------- helpers --------------------- */
+    /* ------------ helpers ------------ */
     const showTab=(id,btn)=>{
       document.querySelectorAll('.tab-button').forEach(b=>b.classList.remove('active'));
       document.querySelectorAll('.content-panel').forEach(p=>p.classList.remove('active'));
-      btn.classList.add('active'); document.getElementById(id).classList.add('active');
+      btn.classList.add('active');document.getElementById(id).classList.add('active');
     };
 
-    /* --------------------- main render ----------------- */
-  // ───────────── renderEntry ─────────────
-  function renderEntry(entry, schema, num){
+    const popRef=id=>{
+      const d=referenceData[id];if(!d)return;
+      const card=document.createElement('div');card.className='reference-detail-card';
+      card.innerHTML=`<button class="close-ref-btn" aria-label="Close">&times;</button>
+                      <h3>${d.title}</h3><div>${d.content}</div>`;
+      card.querySelector('.close-ref-btn').onclick=()=>card.remove();
+      document.body.appendChild(card);
+    };
 
-    /* ---------- choose section order ---------- */
-    // BEGIN PATCH
-    // always start with the order defined in the schema
-    const sections = [...schema.defaultSections];
+    /* ------------ render entry ------------ */
+    function renderEntry(entry,schema,num){
+      const sections=[...schema.defaultSections];
+      Object.keys(entry).forEach(sec=>{
+        if(schema.sectionRenderers[sec]&&!sections.includes(sec))sections.push(sec);
+      });
 
-    // if the entry has extra sections that the schema also recognises
-    // (i.e. there is a renderer for them), append them
-    Object.keys(entry).forEach(sec => {
-      if (schema.sectionRenderers[sec] && !sections.includes(sec)) {
-        sections.push(sec);
-      }
-    });
-    // END PATCH
+      document.title=`${schema.projectName} — ${schema.entryLabel} ${num}`;
+      document.querySelector('.book-title').textContent=schema.projectName;
+      document.querySelector('.chapter-info').textContent=
+        `${schema.entryLabel} ${num}: ${entry.title}`;
+      document.querySelector('.page-range').textContent=entry.pageRange||'';
+      referenceData=entry.referenceData||{};
 
-    /* ---------- header ---------- */
-    document.title = `${schema.projectName} — ${schema.entryLabel} ${num}`;
-    document.querySelector('.book-title').textContent = schema.projectName;
-    document.querySelector('.chapter-info').textContent =
-      `${schema.entryLabel} ${num}: ${entry.title}`;
+      document.getElementById('nav-tabs-container').innerHTML=
+        sections.filter(sec=>entry[sec]).map(sec=>
+          `<button class="tab-button" data-tab="${sec}">
+             ${schema.sectionLabels[sec]||sec}
+           </button>`).join('');
 
-      document.querySelector('.page-range').textContent = entry.pageRange || '';
+      document.getElementById('main-content-area').innerHTML=
+        sections.filter(sec=>entry[sec]).map(sec=>{
+          const fn=RENDERER_LIBRARY[schema.sectionRenderers[sec]];
+          return `<div class="content-panel" id="${sec}">
+                    <h2 class="section-title">${entry[sec].title}</h2>
+                    ${fn ? fn(entry[sec]) : `<p>No renderer for ${sec}</p>`}
+                  </div>`;
+        }).join('');
 
-      /* nav tabs */
-      document.getElementById('nav-tabs-container').innerHTML =
-        sections
-          .filter(sec => entry[sec])       // only tabs that actually have data
-          .map(sec => `<button class="tab-button" data-tab="${sec}">
-                         ${schema.sectionLabels[sec] || sec}
-                       </button>`).join('');
-
-      /* panels */
-      document.getElementById('main-content-area').innerHTML =
-        sections
-          .filter(sec => entry[sec])
-          .map(sec =>{
-            const rendererName = schema.sectionRenderers[sec];
-            const fn = RENDERER_LIBRARY[rendererName];
-            return `<div class="content-panel" id="${sec}">
-                      <h2 class="section-title">${entry[sec].title}</h2>
-                      ${fn ? fn(entry[sec]) : `<p>No renderer for ${sec}</p>`}
-                    </div>`;
-          }).join('');
-
-      /* first tab active */
       const first=document.querySelector('.tab-button');
       if(first)showTab(first.dataset.tab,first);
     }
 
+    /* ------------ init ------------ */
     async function init(){
-      const rawId = new URLSearchParams(location.search).get('id') || 'content1';
-      const num   = rawId.replace(/^content/,'');
-      const main  = document.getElementById('main-content-area');
+      const rawId=new URLSearchParams(location.search).get('id')||'content1';
+      const num  =rawId.replace(/^content/,'');
+      const main =document.getElementById('main-content-area');
       try{
-        const [entryRes,schemaRes] = await Promise.all([
+        const [eRes,sRes]=await Promise.all([
           fetch(`data/contents/${rawId}.json`),
           fetch('data/schema.json')
         ]);
-        if(!entryRes.ok)  throw new Error(`${rawId}.json missing`);
-        if(!schemaRes.ok) throw new Error('schema.json missing');
-
-        const entry  = await entryRes.json();
-        const schema = await schemaRes.json();
-        renderEntry(entry,schema,num);
-      }catch(err){
-        console.error(err);
+        if(!eRes.ok)throw new Error(`${rawId}.json missing`);
+        if(!sRes.ok)throw new Error('schema.json missing');
+        renderEntry(await eRes.json(),await sRes.json(),num);
+      }catch(e){
+        console.error(e);
         main.innerHTML=`<div class="content-panel active" style="color:#ff8a80;">
-                          <h2>Error Loading Page</h2><p>${err.message}</p></div>`;
+                          <h2>Error Loading Page</h2><p>${e.message}</p></div>`;
       }
     }
 
-    document.addEventListener('DOMContentLoaded', ()=>{
+    /* ------------ listeners ------------ */
+    document.addEventListener('DOMContentLoaded',()=>{
       init();
-      document.body.addEventListener('click', e=>{
-        const btn=e.target.closest('.tab-button'); if(btn) return showTab(btn.dataset.tab,btn);
+      document.body.addEventListener('click',e=>{
+        const t=e.target.closest('.tab-button');    if(t)return showTab(t.dataset.tab,t);
+        const r=e.target.closest('.clickable-ref'); if(r)return popRef(r.dataset.refId);
+        const th=e.target.closest('.theme-btn');    if(th)return document.body.className=`theme-${th.dataset.theme}`;
       });
     });
   </script>
